--- a/app/src/main/res/layout/fragment_share.xml
+++ b/app/src/main/res/layout/fragment_share.xml
@@ -29,55 +29,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <!--<androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="280dp"
-                    app:cardBackgroundColor="@color/colorGray2"
-                    app:cardCornerRadius="30dp">
-
-                    <ImageView
-                        android:id="@+id/imageViewUser"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        app:srcCompat="@drawable/ic_person_white" />
-                </androidx.cardview.widget.CardView>
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:paddingTop="20dp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent">
-
-                        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-                            android:id="@+id/buttonCamera"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
-                            android:onClick="@{userModel::onClick}"
-                            android:text="@string/menu_camera"
-                            android:textAlignment="center"
-                            android:textColor="@color/colorWhite"
-                            app:backgroundTint="@color/colorGray2" />
-
-                        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-                            android:id="@+id/buttonGallery"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
-                            android:onClick="@{userModel::onClick}"
-                            android:text="@string/gallery"
-                            android:textAlignment="center"
-                            android:textColor="@color/colorWhite"
-                            app:backgroundTint="@color/colorGray2" />
-                    </LinearLayout>
-                </androidx.constraintlayout.widget.ConstraintLayout>-->
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -88,6 +39,23 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:srcCompat="@mipmap/ic_logos"/>
+
+                    <TextView
+                        android:id="@+id/Text1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:text="Agregar Contacto"
+                        android:textAlignment="inherit"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                        android:textSize="20sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/tel_text_input"
@@ -106,9 +74,7 @@
                             android:layout_height="wrap_content"
                             android:textColor="@color/colorBlack"
                             android:inputType="phone"
-                            android:textColorHint="@color/colorBlack"
-
-                            >
+                            android:textColorHint="@color/colorBlack">
                         </com.google.android.material.textfield.TextInputEditText>
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -135,39 +101,42 @@
                         </com.google.android.material.textfield.TextInputEditText>
                     </com.google.android.material.textfield.TextInputLayout>
 
-                    <!--<com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/password_text_input"
-                        style="@style/TextInputLayout"
-                        android:layout_width="match_parent"
-                        android:layout_height="70dp"
-                        android:hint="@string/prompt_password"
-                        android:textColorHint="@color/colorWhite"
-                        app:errorEnabled="true"
-                        app:hintTextColor="@color/colorWhite">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/password_edit_text"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:inputType="textPassword"
-                            android:textColor="@color/colorWhite"
-                            android:textColorHint="@color/colorWhite"
-                            app:binding="@{userModel.passwordUI}"
-                            >
-                        </com.google.android.material.textfield.TextInputEditText>
-                    </com.google.android.material.textfield.TextInputLayout>-->
-
-                    <!--<Spinner
-                        android:id="@+id/spinnerRoles"
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:layout_weight="1"
+                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+                        android:id="@+id/buttonAgregar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="8dp"
+                        android:text="Validar y agregar "
+                        android:textAlignment="center"
                         android:textColor="@color/colorWhite"
-                        android:textColorHint="@color/colorWhite"
-                        android:entries="@array/item_roles"
-                        android:background="@color/colorWhite"
-                        android:selectedItemPosition="@={userModel.item.selectedItemPosition}"></Spinner>
-                        -->
+                        app:backgroundTint="@color/colorGray2" />
+
+                    <TextView
+                        android:id="@+id/Text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:text="Gestionar Contactos"
+                        android:textAlignment="inherit"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                        android:textSize="20sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ListView
+                        android:id="@+id/listContactos"
+                        android:layout_width="match_parent"
+                        android:layout_height="248dp" />
+
+                    <androidx.constraintlayout.widget.Guideline
+                        android:id="@+id/guideline"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical" />
+
                 </LinearLayout>
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
@@ -188,29 +157,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent">
-                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-                        android:id="@+id/buttonCancel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:text="@string/Cancelar_Confianza"
-                        android:textAlignment="center"
-                        android:textColor="@color/colorWhite"
-                        app:backgroundTint="@color/colorBlack"
-                        app:rippleColor="@color/colorWhite"
 
-                        />
-                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-                        android:id="@+id/buttonAddUser"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:text="@string/Agregar_confianza"
-                        android:textAlignment="center"
-                        android:textColor="@color/colorWhite"
-                        app:backgroundTint="@color/colorBlack"
-                        app:rippleColor="@color/colorWhite"
-                        />
                     <ProgressBar
                         android:id="@+id/progressBarAgConConf"
                         style="?android:attr/progressBarStyle"
