--- a/app/src/main/res/drawable/borde_layout.xml
+++ b/app/src/main/res/drawable/borde_layout.xml
@@ -3,11 +3,11 @@
     android:padding="5dp"
     android:shape="rectangle">
     <solid android:color="@color/colorGray"></solid>
-    <padding android:left="10dp"
+    <padding
+        android:left="10dp"
         android:top="1dp"
         android:right="10dp"
-        android:bottom="30dp">
-    </padding>
+        android:bottom="30dp"></padding>
     <!--<corners
         android:bottomLeftRadius="60dp"
         android:bottomRightRadius="60dp"
