--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/text_gallery"
@@ -83,11 +81,12 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:paddingTop="45dp">
+
                     <ImageView
                         android:id="@+id/imageView1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:srcCompat="@mipmap/ic_logos"/>
+                        app:srcCompat="@mipmap/ic_logos" />
                     <!--<com.google.android.material.textfield.TextInputLayout
                         android:capitalize="sentences"
                         android:inputType="textCapSentences|textNoSuggestions"
@@ -179,9 +178,7 @@
                             android:layout_height="wrap_content"
                             android:inputType="textEmailAddress"
                             android:textColor="@color/colorBlack"
-                            android:textColorHint="@color/colorBlack"
-                            >
-                        </com.google.android.material.textfield.TextInputEditText>
+                            android:textColorHint="@color/colorBlack"></com.google.android.material.textfield.TextInputEditText>
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <!--<com.google.android.material.textfield.TextInputLayout
@@ -227,9 +224,11 @@
             android:layout_height="70dp"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent">
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -237,6 +236,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent">
+
                     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                         android:id="@+id/buttonCancelRestablecer"
                         android:layout_width="wrap_content"
@@ -249,6 +249,7 @@
                         app:rippleColor="@color/colorWhite"
 
                         />
+
                     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                         android:id="@+id/buttonRestablecer"
                         android:layout_width="wrap_content"
@@ -258,8 +259,7 @@
                         android:textAlignment="center"
                         android:textColor="@color/colorWhite"
                         app:backgroundTint="@color/colorBlack"
-                        app:rippleColor="@color/colorWhite"
-                        />
+                        app:rippleColor="@color/colorWhite" />
 
 
                 </LinearLayout>
