--- a/app/src/main/res/layout/fragment_tools.xml
+++ b/app/src/main/res/layout/fragment_tools.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/text_tools"
@@ -83,11 +81,13 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:paddingTop="45dp">
+
                     <ImageView
                         android:id="@+id/imageView1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:srcCompat="@mipmap/ic_logos"/>
+                        app:srcCompat="@mipmap/ic_logos" />
+
                     <com.google.android.material.textfield.TextInputLayout
                         android:capitalize="sentences"
                         android:inputType="textCapSentences|textNoSuggestions"
@@ -109,9 +109,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textColor="@color/colorBlack"
-                            android:textColorHint="@color/colorBlack"
-                            >
-                        </com.google.android.material.textfield.TextInputEditText>
+                            android:textColorHint="@color/colorBlack"></com.google.android.material.textfield.TextInputEditText>
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -135,8 +133,7 @@
                             android:textColor="@color/colorBlack"
                             android:textColorHint="@color/colorBlack"
 
-                            >
-                        </com.google.android.material.textfield.TextInputEditText>
+                            ></com.google.android.material.textfield.TextInputEditText>
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -158,8 +155,7 @@
                             android:inputType="phone"
                             android:textColorHint="@color/colorBlack"
 
-                            >
-                        </com.google.android.material.textfield.TextInputEditText>
+                            ></com.google.android.material.textfield.TextInputEditText>
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -179,9 +175,7 @@
                             android:layout_height="wrap_content"
                             android:inputType="textEmailAddress"
                             android:textColor="@color/colorBlack"
-                            android:textColorHint="@color/colorBlack"
-                            >
-                        </com.google.android.material.textfield.TextInputEditText>
+                            android:textColorHint="@color/colorBlack"></com.google.android.material.textfield.TextInputEditText>
                     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -202,9 +196,7 @@
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:textColor="@color/colorBlack"
-                            android:textColorHint="@color/colorBlack"
-                            >
-                        </com.google.android.material.textfield.TextInputEditText>
+                            android:textColorHint="@color/colorBlack"></com.google.android.material.textfield.TextInputEditText>
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <!--<com.google.android.material.textfield.TextInputLayout
@@ -250,9 +242,11 @@
             android:layout_height="70dp"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent">
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -260,6 +254,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent">
+
                     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                         android:id="@+id/buttonCancel"
                         android:layout_width="wrap_content"
@@ -272,6 +267,7 @@
                         app:rippleColor="@color/colorWhite"
 
                         />
+
                     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                         android:id="@+id/buttonAddUser"
                         android:layout_width="wrap_content"
@@ -281,8 +277,8 @@
                         android:textAlignment="center"
                         android:textColor="@color/colorWhite"
                         app:backgroundTint="@color/colorBlack"
-                        app:rippleColor="@color/colorWhite"
-                        />
+                        app:rippleColor="@color/colorWhite" />
+
                     <ProgressBar
                         android:id="@+id/progressBarAcConConf"
                         style="?android:attr/progressBarStyle"
