--- a/app/src/main/res/layout/principal.xml
+++ b/app/src/main/res/layout/principal.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android='http://schemas.android.com/apk/res/android'
-    xmlns:app='http://schemas.android.com/apk/res-auto'
-    xmlns:tools='http://schemas.android.com/tools'>
+    xmlns:app='http://schemas.android.com/apk/res-auto'>
 
     <data>
 
@@ -49,15 +48,13 @@
                         android:text="@string/welcome2"
                         android:textAlignment="center"
                         android:textColor="@color/colorWhite"
-                        android:textSize="24sp">
-                    </TextView>
+                        android:textSize="24sp"></TextView>
 
                     <ImageView
                         android:id="@+id/imageView1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:srcCompat="@mipmap/ic_logos">
-                    </ImageView>
+                        app:srcCompat="@mipmap/ic_logos"></ImageView>
 
 
                     <!--<com.google.android.material.textfield.TextInputLayout
@@ -86,8 +83,7 @@
                         android:text="@string/registro"
                         android:textColor="@color/colorWhite"
                         android:textStyle="bold"
-                        android:onClick="@{emailModel::onClick}">
-                    </Button>
+                        android:onClick="@{emailModel::onClick}"></Button>
 
                     <Button
                         android:id="@+id/iniciarsesion"
@@ -99,8 +95,7 @@
                         android:text="@string/iniciarsesion"
                         android:textColor="@color/colorWhite"
                         android:textStyle="bold"
-                        android:onClick="@{emailModel::onClick}">
-                    </Button>
+                        android:onClick="@{emailModel::onClick}"></Button>
 
                     <TextView
                         android:id="@+id/textView2"
@@ -110,8 +105,7 @@
                         android:paddingBottom="20dp"
                         android:text="@string/pdhn"
                         android:textAlignment="center"
-                        android:textColor="@color/colorWhite">
-                    </TextView>
+                        android:textColor="@color/colorWhite"></TextView>
 
                 </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
