--- a/app/src/main/res/layout/verify_email.xml
+++ b/app/src/main/res/layout/verify_email.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android='http://schemas.android.com/apk/res/android'
-    xmlns:app='http://schemas.android.com/apk/res-auto'
-    xmlns:tools='http://schemas.android.com/tools'>
+    xmlns:app='http://schemas.android.com/apk/res-auto'>
 
     <data>
 
@@ -49,15 +48,13 @@
                         android:text="@string/welcome"
                         android:textAlignment="center"
                         android:textColor="@color/colorWhite"
-                        android:textSize="24sp">
-                    </TextView>
+                        android:textSize="24sp"></TextView>
 
                     <ImageView
                         android:id="@+id/imageView1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:srcCompat="@mipmap/ic_logos">
-                    </ImageView>
+                        app:srcCompat="@mipmap/ic_logos"></ImageView>
 
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -67,13 +64,13 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/prompt_email"
                         app:errorEnabled="true">
+
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/email_edit_text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="textEmailAddress"
-                            app:binding="@{emailModel.emailUI}"
-                            />
+                            app:binding="@{emailModel.emailUI}" />
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <Button
@@ -86,8 +83,7 @@
                         android:text="@string/action_sign_in"
                         android:textColor="@color/colorWhite"
                         android:textStyle="bold"
-                        android:onClick="@{emailModel::onClick}">
-                    </Button>
+                        android:onClick="@{emailModel::onClick}"></Button>
 
                     <TextView
                         android:id="@+id/textView2"
@@ -97,8 +93,7 @@
                         android:paddingBottom="20dp"
                         android:text="@string/pdhn"
                         android:textAlignment="center"
-                        android:textColor="@color/colorWhite">
-                    </TextView>
+                        android:textColor="@color/colorWhite"></TextView>
 
                 </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
