--- a/app/src/main/res/layout/verify_password.xml
+++ b/app/src/main/res/layout/verify_password.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <data>
+
         <variable
             name="passwordModel"
-            type="ViewModels.LoginViewModels"/>
+            type="ViewModels.LoginViewModels" />
     </data>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,9 +19,11 @@
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingBottom="@dimen/activity_vertical_margin">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <LinearLayout
                 android:id="@+id/email_login_form"
                 android:layout_width="match_parent"
@@ -29,6 +33,7 @@
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
+
                 <TextView
                     android:id="@+id/textView"
                     android:layout_width="match_parent"
@@ -37,12 +42,14 @@
                     android:text="@string/welcome"
                     android:textAlignment="center"
                     android:textColor="@color/colorWhite"
-                    android:textSize="24sp"/>
+                    android:textSize="24sp" />
+
                 <ImageView
                     android:id="@+id/imageView1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@mipmap/ic_logos"/>
+                    app:srcCompat="@mipmap/ic_logos" />
+
                 <TextView
                     android:id="@+id/textView3"
                     android:layout_width="match_parent"
@@ -51,8 +58,8 @@
                     android:text="@{passwordModel.emailData}"
                     android:textAlignment="center"
                     android:textColor="@color/colorBlue"
-                    android:textSize="18sp">
-                </TextView>
+                    android:textSize="18sp"></TextView>
+
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/password_text_input"
                     style="@style/TextInputLayout"
@@ -61,6 +68,7 @@
                     android:hint="@string/prompt_password"
                     app:errorEnabled="true"
                     app:passwordToggleEnabled="true">
+
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/password_edit_text"
                         android:layout_width="match_parent"
@@ -68,6 +76,7 @@
                         android:inputType="textPassword"
                         app:binding="@{passwordModel.passwordUI}" />
                 </com.google.android.material.textfield.TextInputLayout>
+
                 <Button
                     android:id="@+id/password_sign_in_button"
                     style="?android:textAppearanceSmall"
@@ -78,8 +87,8 @@
                     android:text="@string/action_sign_in_short2"
                     android:textColor="@color/colorWhite"
                     android:textStyle="bold"
-                    android:onClick="@{passwordModel::onClick}">
-                </Button>
+                    android:onClick="@{passwordModel::onClick}"></Button>
+
                 <TextView
                     android:id="@+id/textView2"
                     android:layout_width="match_parent"
@@ -88,8 +97,7 @@
                     android:paddingBottom="20dp"
                     android:text="@string/pdhn"
                     android:textAlignment="center"
-                    android:textColor="@color/colorWhite">
-                </TextView>
+                    android:textColor="@color/colorWhite"></TextView>
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
