--- a/app/src/main/res/layout/fragment_share.xml
+++ b/app/src/main/res/layout/fragment_share.xml
@@ -70,8 +70,8 @@
                             android:id="@+id/tel_edit_text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/colorBlack"
                             android:inputType="textEmailAddress"
+                            android:textColor="@color/colorBlack"
                             android:textColorHint="@color/colorBlack"></com.google.android.material.textfield.TextInputEditText>
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -96,15 +96,29 @@
                             android:textColorHint="@color/colorBlack"></com.google.android.material.textfield.TextInputEditText>
                     </com.google.android.material.textfield.TextInputLayout>
 
-                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-                        android:id="@+id/buttonAgregar"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:text="Validar y agregar "
-                        android:textAlignment="center"
-                        android:textColor="@color/colorWhite"
-                        app:backgroundTint="@color/colorGray2" />
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:background="@color/colorWhite"
+                            android:orientation="horizontal"
+                            android:paddingTop="5dp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent">
+
+                            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+                                android:id="@+id/buttonAgregar"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Validar y agregar "
+                                android:textAlignment="center"
+                                android:textColor="@color/colorWhite"
+                                app:backgroundTint="@color/colorGray2" />
+                        </LinearLayout>
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <TextView
                         android:id="@+id/Text"
