--- a/app/src/main/res/layout/verify_password.xml
+++ b/app/src/main/res/layout/verify_password.xml
@@ -88,7 +88,17 @@
                     android:textColor="@color/colorWhite"
                     android:textStyle="bold"
                     android:onClick="@{passwordModel::onClick}"></Button>
-
+                <Button
+                    android:id="@+id/email_change_in_button"
+                    style="?android:textAppearanceSmall"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:background="@drawable/borde_redondo"
+                    android:text="@string/action_change_in"
+                    android:textColor="@color/colorWhite"
+                    android:textStyle="bold"
+                    android:onClick="@{passwordModel::onClick}"></Button>
                 <TextView
                     android:id="@+id/textView2"
                     android:layout_width="match_parent"
